docker added  --commit

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,8 @@ JWT_SECRET_KEY=your-super-secret-key-change-in-production
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
 # Database Configuration
-DATABASE_URL=sqlite:///./app/db/nifties.db
+DATABASE_URL=DATABASE_URL=postgres://setc:admin%40123%40%21@13.204.188.14:5432/nifties
+
 
 # Logging Configuration
 LOG_LEVEL=INFO
