--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ starlette==0.35.0
 # Database & ORM
 sqlalchemy==2.0.27
 alembic==1.13.0
-psycopg2
+psycopg2-binary==2.9.6
 
 # Data Validation & Serialization
 pydantic==2.6.0
