--- a/requirements.txt
+++ b/requirements.txt
@@ -43,3 +43,13 @@ python-multipart==0.0.6
 pytest==7.4.4
 pytest-asyncio==0.23.3
 httpx==0.25.2
+
+
+#broker pkg
+smartapi-python
+logzero
+pyotp
+dhanhq==2.1.0
+
+websocket-client
+websockets
