--- a/.env
+++ b/.env
@@ -5,7 +5,8 @@ ACCESS_TOKEN_EXPIRE_MINUTES=30
 
 # Database Configuration
 DATABASE_URL="postgresql://setc:admin%40123%40%21@13.204.188.14:5432/nifties"
-DATABASE_URL_dev="postgresql://postgres:admin%40123@localhost:5432/nifties"
+# DATABASE_URL="postgresql+psycopg://setc:admin%40123%40%21@13.204.188.14:5432/nifties"
+DATABASE_URL_dev="postgresql+psycopg://postgres:admin%40123@localhost:5432/nifties"
 
 
 # Logging Configuration
